# datakwaliteit-tool

./: .coverage  .coveragerc  .gitignore  Makefile  Pipfile  README.md  app.py  pyproject.toml  pysidedeploy.spec  run.py
.github/workflows/: main.yml
backend/: constraints.py  export.py  utils.py  wikibasehelper.py
src/: app.py
src/backend/: batcheditor.py  configuration.py  constraints.py  export.py  model.py  sql.py  types.py  utils.py  wikibasehelper.py
src/backend/constraint/: base.py  constraint_types.py  model.py  queries.py
src/datakwaliteit_tool/: app.py
src/datakwaliteit_tool/backend/: batcheditor.py  export.py  sql.py
src/datakwaliteit_tool/backend/constraint/: model.py  queries.py
src/datakwaliteit_tool/ui/: configurationtab.py  edittab.py
src/datakwaliteit_tool/ui/designer/: build.py  edittab.py  (+2 more)
src/ui/: configurationtab.py  constrainttab.py  edittab.py  model.py  querytab.py  simpletablemodel.py  violations_table.py
src/ui/designer/: build.py  configurationtab.py  configurationtab.ui  constrainttab.py  constrainttab.ui  edittab.py  edittab.ui  mainwindow.py  querytab.py  querytab.ui
test/backend/: mocks.py  stubs.py  test_batcheditor.py  test_configuration.py  test_export.py  test_utils.py  test_wikibasehelper_querythread.py  test_wikibasehelper_wikibaseconfig.py  test_wikibasehelper_wikibasequeryrunner.py
test/backend/constraint/: test_base.py  test_queries_exception_ids.py
ui/: build.py  constrainttab.py  constrainttab.ui  edittab.py  edittab.ui  mainwindow.py  mainwindow.ui  queryform.py  queryform.ui  querytab.py  querytab.ui
