[project]
name = "datakwaliteit-tool"
version = "0.4.4"
requires-python = ">=3.13"
dependencies = [
    "wikibaseintegrator",
    "pyside6",
    "odswriter",
    "xlsxwriter",
    "imageio",
    "keyring",
]

[tool.pytest.ini_options]
qt_api="pyside6"

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest",
    "coverage",
    "pytest-qt",
    "pyexcel_xlsx",
    "ezodf",
    "lxml",
]

[project.gui-scripts]
datakwaliteit-tool = "datakwaliteit_tool:run"

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
